fixed an overflow bug in movie cards

--- a/src/components/common/MovieCard/MovieCard.scss
+++ b/src/components/common/MovieCard/MovieCard.scss
@@ -1,5 +1,5 @@
 .movie-card {
-  width: 65%;
+  width: 70%;
   height: 12em;
   color: white;
   padding: 4px;
@@ -18,7 +18,7 @@
     
 
     &__poster {
-      width: 15%;
+      width: 25%;
       
       &__img-helper {
         display: inline-block;
@@ -28,13 +28,14 @@
 
       img {
         vertical-align: middle;
-        height: 11em;
-        width: 8em;
+        height: 100%;
+        width: auto;
+        max-width: 100%;
       }
     }
 
     &__summary {
-      width: 85%;
+      width: 75%;
       display: grid;
       grid-template-rows: 40% 20% 40%;
       padding: .5em;
